--- a/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
@@ -103,7 +103,7 @@
 				}
 			});
 			mui.plusReady(function() {
-				events.fireToPageNone('sciedu_home.html', 'detailReady');
+				events.fireToPageNone('sciedu-list.html', 'detailReady');
 				setListeners();
 			});
 
