增加点击新闻跳转到详情的逻辑

--- a/JiaoBaoYun-hb/html/sciedu/sciedu_home.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu_home.html
@@ -96,7 +96,7 @@
 			var show = true; //是否显示科教的内容
 			var sliderId = ''; //记录显示的城市
 			var pageAndInfo = {}; //保存对应的城市信息和页码
-			var detailReady=false;
+			var detailReady = false;
 			//pageAndInfo={
 			//	info:{},//城市信息
 			//	page:{},//页码
@@ -136,8 +136,8 @@
 			 * 初始化监听
 			 */
 			function initListener() {
-				window.addEventListener("detailReady",function(){
-					detailReady=true;
+				window.addEventListener("detailReady", function() {
+					detailReady = true;
 				})
 				//进入订制城市界面
 				document.getElementById('changeCity').addEventListener('tap', function() {
@@ -260,15 +260,13 @@
 							////console.log('tap seHistory ' + JSON.stringify(History));
 						}
 						document.getElementById("title_" + id).style.color = 'darkgray';
-						events.readyToPage(detailReady, "sciedu_show_main.html", "scieduItemInfo", mui.extend({},listData[index],cityInfo));
-//						events.openNewWindowWithData('sciedu_show_main.html', {
-//							acode: sliderId,
-//							tabId: tabid,
-//							title: title,
-//							tips: tips,
-//							rotips: rotips,
-//							turl: turl
-//						});
+						var translateData = {
+							acode: sliderId,
+							tabid: tabid,
+							title: title,
+							tips: tips,
+						}
+						events.readyToPage(detailReady, "sciedu_show_main.html", "scieduItemInfo", translateData);
 					});
 
 					//获取定制的城市
@@ -469,7 +467,7 @@
 					callBack(cities);
 				} else {
 					postDataPro_PostUTcity(comData, null, function(data) {
-						console.log('44 获取个人的订制城市 PostUTcity ',data);
+						console.log('44 获取个人的订制城市 PostUTcity ', data);
 						if(data.RspCode == 0) {
 							if(data.RspData == null) {
 								//从来就没有订制过城市的就强制添加一个账号所在地
@@ -533,7 +531,7 @@
 				};
 				//45.通过区域代码获取对应区域的分页新闻
 				postDataPro_PostTnews(comData, wd, function(data) {
-					console.log('45 通过区域代码获取对应区域的分页新闻 PostTnews ',data);
+					console.log('45 通过区域代码获取对应区域的分页新闻 PostTnews ', data);
 					if(data.RspCode == 0) {
 						//记录页数
 						pageAndInfo[cityCode].page = {
