--- a/JiaoBaoYun-hb/html/show/show-home1.html
+++ b/JiaoBaoYun-hb/html/show/show-home1.html
@@ -37,12 +37,10 @@
 		<div id="slider" class="mui-content mui-slider mui-fullscreen">
 			<!--加载的范围-->
 			<div class="mui-slider-group">
-				<div id="show-all" class="mui-slider-item">
-					<div class="mui-scroll-wrapper">
-						<div class="mui-scroll">
-							<div class="show-list">
+				<div id="show-all" class="mui-slider-item mui-scroll-wrapper">
+					<div class="mui-scroll">
+						<div class="show-list">
 
-							</div>
 						</div>
 					</div>
 				</div>
@@ -61,7 +59,7 @@
 		<script src="../../js/show/show_listnew.js"></script>
 		<script>
 			mui.init();
-			var detailReady=false;
+			var detailReady = false;
 			document.getElementById("show-all").showCity = {
 				pageFlag: 1, //全部
 				acode: 1,
@@ -74,9 +72,9 @@
 			var deceleration = mui.os.ios ? 0.003 : 0.0009;
 			//plusReay事件监听
 			mui.plusReady(function() {
-				events.preload('show-detail.html',100);
-				window.addEventListener('detailReady',function(e){
-					detailReady=e.detail;
+				events.preload('show-detail.html', 100);
+				window.addEventListener('detailReady', function(e) {
+					detailReady = e.detail;
 				})
 				//show-all加载刷新
 				initFresh(document.getElementById("show-all"));
@@ -104,7 +102,7 @@
 					getFocusedPerson(toggleAttendedPart);
 				})
 				window.addEventListener("updatesShow", function() {
-					var freshConatiner=document.getElementById("show-all");
+					var freshConatiner = document.getElementById("show-all");
 					var ul = freshConatiner.querySelector('.show-list');
 					freshConatiner.showCity.pageIndex = 1;
 					//console.log("获取的fresh:" + JSON.stringify(freshConatiner.info))
@@ -266,13 +264,11 @@
 			function createAttendedFragment() {
 				var div = document.createElement("div");
 				div.id = "show-attended";
-				div.className = "mui-slider-item"
-				div.innerHTML = '<div  class="mui-scroll-wrapper">\
-							<div class="mui-scroll">\
+				div.className = "mui-slider-item mui-scroll-wrapper"
+				div.innerHTML = '<div class="mui-scroll">\
 							  <div class="show-list">\
 							  </div>\
-							</div>\
-						</div>';
+							</div>';
 				return div;
 			}
 		</script>
