修改游客课程关注事件

--- a/JiaoBaoYun-hb/html/micro-course/course-all.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-all.html
@@ -230,6 +230,7 @@
 
 			function setListener() {
 				window.addEventListener('t-focus', function(e) {
+					console.log("course-all.html的关注事件监听")
 					courseInfo.pageIndex = 1;
 					course_list.getData(courseInfo, function(data) {
 						addData(data);
