--- a/JiaoBaoYun-hb/html/micro-course/course-attended.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-attended.html
@@ -31,7 +31,7 @@
 		</style>
 	</head>
 
-	<body style="">
+	<body style="background-color: white;">
 		<!--下拉刷新容器-->
 		<div id="course-att" class="mui-content mui-scroll-wrapper" v-bind:class="{'background-white':!isAttended}">
 			<div class="mui-scroll">
