修复发现列表 无关注的人时的bug

--- a/JiaoBaoYun-hb/html/show/show-attended.html
+++ b/JiaoBaoYun-hb/html/show/show-attended.html
@@ -229,8 +229,10 @@
 					showAtt.isRequired = true;
 				}, function(err) {
 					showAtt.isAttended = 0
-					mui.toast(err.RspTxt);
 					showAtt.isRequired = true
+					if(err && err.RspTxt) {
+						mui.toast(err.RspTxt);
+					}
 				})
 				console.log("showAtt.detailReady" + showAtt.detailReady);
 				setListener();
