--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -20,7 +20,7 @@
 			<h1 id="title" class="mui-title"></h1>
 			<a id="publish" class="mui-icon mui-pull-right mui-plus-visible" style="padding-left: 30px;padding-top: 15px;font-size: 14px;">发布</a>
 		</header>
-		<div id="contentDiv" class="mui-content mui-hidden" style="background-color: white;">
+		<div id="contentDiv" class="mui-content" style="background-color: white;">
 			<textarea id="askTitle" name="topic" placeholder="标题（最多30字）" style="height: 40px;margin-top: 0px;border-bottom-color: #e4e4e4;overflow:hidden"></textarea>
 			<div id="inputDiv" class="input-content" style="margin-top: -20px;border-color: white;height: 20rem;">
 				<textarea id="input-content" placeholder="请输入内容（最多2000字）" style="border-color: white;height: 15rem;"></textarea>
