--- a/JiaoBaoYun-hb/html/utils/customizeCity.html
+++ b/JiaoBaoYun-hb/html/utils/customizeCity.html
@@ -154,7 +154,7 @@
 			var commitCities = []; //提交的城市
 			var selectId = ''; //修改账号地区时记录选择的元素id（acode）
 			var pInfo = myStorage.getItem(window.storageKeyName.PERSONALINFO);
-
+			console.log('personal:' + JSON.stringify(pInfo));
 			init();
 
 			/**
